Final tweaks - pre critique
Config variables and sass

--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -119,7 +119,7 @@ $u-Bio__contactData--color: inherit;
 
 $u-BreadCrumbs__item--font: .9em $sans-serif;
 
-$u-BreadCrumbs__item--dividerColor: #ccc;
+$u-BreadCrumbs__item--dividerColor: $fontColor;
 
 $u-BreadCrumbs__item--linkColor: $linkColor;
 $u-BreadCrumbs__item--linkColorHoverFocus: $linkColorHoverFocus;
