--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -469,6 +469,7 @@ a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
 }
 .u-Masthead__vassar {
     background-color: transparent;
+    left: auto;
 }
 .u-ExtendedFooter__listItemLink a {
 }
