Footer and breadcrumbs
footer link colors, social media icons, breadcrumbs not hidden

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -187,7 +187,6 @@ li {
 	text-transform: uppercase;
 	letter-spacing: .1em;
 }
-
 .u-VCard--site .u-VCard__item.u-VCard__url {
     font: 300 2em/1.1 $sans-serif-condensed;
 	text-transform: uppercase;
@@ -246,7 +245,6 @@ li {
  * ==============================
  */
 
-.u-BreadCrumbs,
 .u-pageTitle {
     display: none;
     visibility: hidden;
@@ -324,15 +322,6 @@ li {
 	}
     .u-ExtendedFooter__listGroup {
         padding: 4%;
-        display: flex;
-		flex-wrap: wrap;
-    }
-	.u-ExtendedFooter__listContainer {
-		flex-grow: 1;
-		margin: 0 auto;
-		padding: 0 1em 1em;
-	}
-    .u-ExtendedFooter__listGroup {
         margin-bottom: 5em;
     }
     .u-ExtendedFooter__listHeader,
@@ -367,6 +356,17 @@ li {
 	}
 	.g- #navigation:target .g-NavSite__level--1.g-NavSite__sec--page-menu {
 		@include hidden;
+	}
+}
+@media all and (min-width: 43.75em) {
+    .u-ExtendedFooter__listGroup {
+        padding: 4%;
+        display: flex;
+		flex-wrap: wrap;
+    }
+	.u-ExtendedFooter__listContainer {
+        flex-basis: 50%;
+        padding: 0 1em;
 	}
 }
 @media all and (min-width: $small) {
@@ -421,6 +421,14 @@ li {
 	.u-footMasthead__siteName--link {
 		margin: 0 auto 0 0;
 	}
+	.u-ExtendedFooter__listContainer {
+        flex-basis: 33%;
+	}
+}
+@media all and (min-width: $large) {
+	.u-ExtendedFooter__listContainer {
+        flex-basis: 20%;
+	}
 }
 /* ==============================
  *	COLOR
@@ -455,7 +463,7 @@ a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url,
 a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
 .u-ArticleNavGroup__navButton:link,
 .u-ArticleListItem__link:link,
-.SocialAccount__iconTarget:link {
+.u-lFooter .SocialAccount__iconTarget:link {
     border-bottom: none;
 }
 .u-lHeader {
@@ -478,62 +486,109 @@ a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
 	border-bottom: 1px solid rgba(225, 225, 225, .75);
 }
 .u-footMasthead__siteName--link {
-    background: transparent url(../../../assets/images/vassar-logo.png) no-repeat center;
+    background: transparent url(/assets/images/vassar-logo.png) no-repeat center;
 	background-size: cover;
 	@extend .psuedo-transition;
 }
 .u-footMasthead__siteName--link:hover {
-    background: transparent url(../../../assets/images/vassar-logo-hover.png) no-repeat center;
+    background: transparent url(/assets/images/vassar-logo-hover.png) no-repeat center;
 	background-size: cover;
 }
 .u-footMasthead__siteName--link:active {
-    background: transparent url(../../../assets/images/vassar-logo-active.png) no-repeat center;
+    background: transparent url(/assets/images/vassar-logo-active.png) no-repeat center;
 	background-size: cover;
 }
 .SocialAccount__iconTargetFacebook {
-    background: transparent url(../../../assets/images/facebook-icon.png) no-repeat;
+    background: transparent url(/assets/images/facebook-icon.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetFacebook:hover {
-    background: transparent url(../../../assets/images/facebook-icon-hover.png) no-repeat;
+    background: transparent url(/assets/images/facebook-icon-hover.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetFacebook:active {
-    background: transparent url(../../../assets/images/facebook-icon-active.png) no-repeat;
+    background: transparent url(/assets/images/facebook-icon-active.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetTwitter {
-    background: transparent url(../../../assets/images/twitter-icon.png) no-repeat;
+    background: transparent url(/assets/images/twitter-icon.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetTwitter:hover {
-    background: transparent url(../../../assets/images/twitter-icon-hover.png) no-repeat;
+    background: transparent url(/assets/images/twitter-icon-hover.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetTwitter:active {
-    background: transparent url(../../../assets/images/twitter-icon-active.png) no-repeat;
+    background: transparent url(/assets/images/twitter-icon-active.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetInstagram {
-    background: transparent url(../../../assets/images/instagram-icon.png) no-repeat;
+    background: transparent url(/assets/images/instagram-icon.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetInstagram:hover {
-    background: transparent url(../../../assets/images/instagram-icon-hover.png) no-repeat;
+    background: transparent url(/assets/images/instagram-icon-hover.png) no-repeat;
 	background-size: cover;
 }
 .SocialAccount__iconTargetInstagram:active {
-    background: transparent url(../../../assets/images/instagram-icon-active.png) no-repeat;
+    background: transparent url(/assets/images/instagram-icon-active.png) no-repeat;
 	background-size: cover;
 }
+.SocialAccount__iconTargetLinkedIn {
+    background: transparent url(/assets/images/linkedin-icon.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetLinkedIn:hover {
+    background: transparent url(/assets/images/linkedin-icon-hover.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetLinkedIn:active {
+    background: transparent url(/assets/images/linkedin-icon-active.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetYoutube {
+    background: transparent url(/assets/images/youtube-icon.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetYoutube:hover  {
+    background: transparent url(/assets/images/youtube-icon-hover.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetYoutube:active  {
+    background: transparent url(/assets/images/youtube-icon-active.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetFlickr {
+    background: transparent url(/assets/images/flickr-icon.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetFlickr:hover  {
+    background: transparent url(/assets/images/flickr-icon-hover.png) no-repeat;
+    background-size: cover;
+}
+.SocialAccount__iconTargetFlickr:active  {
+    background: transparent url(/assets/images/flickr-icon-active.png) no-repeat;
+    background-size: cover;
+}
 .u-lFooter {
-	background: $linkColor url(../../../assets/images/global-footer-bg.jpg) no-repeat;
+	background: $linkColor url(/assets/images/global-footer-bg.jpg) no-repeat;
 	background-size: cover;
     border-top: .3em solid $fontColor;
 	color: #fff;
 	a {
-		@include link-colors(#fff, $linkColorHoverFocus, $linkColorActive, #fff, $linkColorHoverFocus);
+		@include link-colors(#fff, $linkColorHoverFocus, $linkColorActive, $linkColorHoverFocus, $linkColorHoverFocus);
 	}
+    a {
+        border-bottom: 1px solid #fff;
+    }
+    a:hover,
+    a:focus,
+    a:visited {
+        border-bottom: 1px solid $linkColorHoverFocus;
+    }
+    a:active {
+        border-bottom: 1px solid $linkColorActive;
+    }
 }
 .galleria-info-text {
     background-color: $linkColor;
@@ -558,37 +613,23 @@ a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
         border-bottom: 1px solid $linkColorActive !important;
     }
 }
-.u-ExtendedFooter__listItemLink,
-.u-ExtendedFooter__listItemLink:visited {
-    color: #fff;
-    border-bottom: 1px solid #fff;
-}
-.u-ExtendedFooter__listItemLink:hover,
-.u-ExtendedFooter__listItemLink:focus {
-	color: $linkColorHoverFocus;
-	border-bottom: 1px solid $linkColorHoverFocus;
-}
-.u-ExtendedFooter__listItemLink:active {
-	color: $linkColorActive;
-	border-bottom: 1px solid $linkColorActive;
-}
 .u-VCard--site {
     a {
         border-bottom: 1px solid;
     }
     .u-VCard__item--contact {
-        @include link-colors(#fff, $linkColorHoverFocus, $linkColorActive, #fff, $linkColorHoverFocus);
+        @include link-colors(#fff, $linkColorHoverFocus, $linkColorActive, $linkColorHoverFocus, $linkColorHoverFocus);
     }
-	a.u-VCard__item:link,
-	a.u-List__item:link,
-	.u-VCard__item:visited,
-	.u-List__item:visited {
+	a.u-VCard__item,
+	a.u-List__item {
 		border-bottom: 1px solid #fff;
 	}
 	.u-VCard__item:hover,
 	.u-List__item:hover,
 	.u-VCard__item:focus,
-	.u-List__item:focus {
+	.u-List__item:focus,
+    .u-VCard__item:visited,
+	.u-List__item:visited {
 		border-bottom: 1px solid $linkColorHoverFocus;
 	}
 	.u-VCard__item:active,
@@ -844,7 +885,7 @@ a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
 }
 .vassar_plaid {
 	background-size: cover;
-	background: #ebe9e8 url(../../../assets/images/about-mission-bg.png) repeat;
+	background: #ebe9e8 url(/assets/images/about-mission-bg.png) repeat;
 }
 .vassar_argyle {
 	background-color: #fff;
