--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -423,6 +423,12 @@ Vassar hompage and the News homepage */
     letter-spacing: .03em;
     padding: 0;
 }
+.u-ArticleNavGroup__navButton.u-ArticleNavGroup__navButton--archive {
+    display: none;
+}
+.u-folderEvents .u-ArticleNavGroup__navButton.u-ArticleNavGroup__navButton--archive {
+    display: inline-block;
+}
 .u-lAside {
 	.Share {
 		margin: 5% 0;
