Events sidebar pre launch
share and aside layout in events

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -594,7 +594,14 @@ Vassar hompage and the News homepage */
             display: inherit;
             visibility: visible;
             .u-NewsContact,
-            .u-NewsContactLink,
+            .u-NewsContactLink {
+                display: none;
+                visibility: hidden;
+            }
+        }
+    }
+    .u-pageIndex.secondLevelNavSplit {
+        .u-lAside {
             .Share {
                 display: none;
                 visibility: hidden;
@@ -1115,7 +1122,7 @@ Vassar hompage and the News homepage */
             margin: 0 4% 0 auto;
         }
         .u-lAside {
-            max-width: 20em;
+            width: 20em;
             margin: 0 auto 0 0;
         }
     }
@@ -1123,6 +1130,7 @@ Vassar hompage and the News homepage */
 		.Share,
 		.u-NewsContact {
 			text-align: left;
+            width: 20em;
 		}
 	}
     .u-newsInner.u-folderArchive,
